Fix segfault if Dial() is used on PJSIP and endpoint was not specified.

Add missing return -1 when we find the endpoint empty.

ASTERISK-25086 #close
Reported by: snuffy

Change-Id: I9de76c2935a1f4e3f0cffe97a670106f5605e89e